--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cosmic Fortune Terminal</title>
   <link rel="stylesheet" href="style.css">
   <!-- jQuery CDN -->
@@ -83,4 +84,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
