Credit Jessica Schwartz in footer
Updated footer to credit Jessica Schwartz.

--- a/index.html
+++ b/index.html
@@ -79,10 +79,11 @@
   </main>
 
   <footer>
-    <p>Made with JavaScript, jQuery, and chaotic star energy ✶</p>
+    <p>Made by Jessica Schwartz with JavaScript, jQuery, and chaotic star energy ✶</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 
 </html>
+
