required html comment after doctype

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!-- Jessica Schwartz
+Cosmic Fortune Terminal - A Javascript & jQuery application that generates randomied fortune readings, stores past results using browser localStorage, and demonstrates interactive UI behaviour. 
+-->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -86,4 +89,5 @@
 </body>
 
 </html>
+
 
