Revise fortune card structure and content
Updated fortune card display and added a subgreeting.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ Cosmic Fortune Terminal - A Javascript & jQuery application that generates rando
           <div class="fortune-category-tag" id="fortune-category-tag"></div>
           <div class="fortune-body">
             <p class="fortune-greeting" id="fortune-greeting"></p>
+            <p class="fortune-subgreeting" id="fortune-subgreeting"></p>
             <p class="fortune-text" id="fortune-text"></p>
             <p class="fortune-note" id="fortune-note"></p>
           </div>
@@ -82,12 +83,9 @@ Cosmic Fortune Terminal - A Javascript & jQuery application that generates rando
   </main>
 
   <footer>
-    <p>Made by Jessica Schwartz with JavaScript, jQuery, and chaotic star energy ✶</p>
+    <p>Made with JavaScript, jQuery, and chaotic star energy ✶</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
-
 </html>
-
-
