--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ Cosmic Fortune Terminal - A Javascript & jQuery application that generates rando
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cosmic Fortune Terminal</title>
+  <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
   <!-- jQuery CDN -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
