Fix HTML formatting and update comments

--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@ Cosmic Fortune Terminal - A Javascript & jQuery application that generates rando
   </main>
 
   <footer>
-    <p>Made by Jessica Schwartz with JavaScript, jQuery, and chaotic star energy ✶</p>
+    <p>Made with JavaScript, jQuery, and chaotic star energy ✶</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
+
 
