Fix HTML formatting and add time status element

--- a/index.html
+++ b/index.html
@@ -56,9 +56,13 @@ Cosmic Fortune Terminal - A Javascript & jQuery application that generates rando
       <div class="panel fortune-panel">
         <h2>Today’s Fortune</h2>
 
-        <div id="fortune-placeholder">
-          <p>Shuffle the cosmos by filling out the form and drawing a card.</p>
-        </div>
+      <p id="time-status" class="time-status">
+  <em></em>
+</p>
+
+<div id="fortune-placeholder">
+  <p>Shuffle the cosmos by filling out the form and drawing a card.</p>
+</div>
 
         <div id="fortune-card" class="fortune-card hidden">
           <div class="fortune-category-tag" id="fortune-category-tag"></div>
@@ -90,5 +94,3 @@ Cosmic Fortune Terminal - A Javascript & jQuery application that generates rando
   <script src="script.js"></script>
 </body>
 </html>
-
-
